[gd_scene load_steps=2 format=3 uid="uid://je5hu4g7602o"]

[ext_resource type="Script" path="res://Scripts/multiplayer.gd" id="1_ai1bk"]

[node name="Multiplayer" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_ai1bk")

[node name="Start" type="Control" parent="."]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Host" type="Button" parent="Start"]
layout_mode = 0
offset_left = 3.0
offset_top = 72.0
offset_right = 54.0
offset_bottom = 103.0
text = "HOST"

[node name="Join" type="Button" parent="Start"]
layout_mode = 0
offset_left = 126.0
offset_top = 72.0
offset_right = 169.0
offset_bottom = 103.0
text = "JOIN"

[node name="IP" type="Label" parent="Start"]
layout_mode = 0
offset_left = 123.0
offset_top = 1.0
offset_right = 170.0
offset_bottom = 24.0
text = "IP"

[node name="LineJoin" type="LineEdit" parent="Start"]
layout_mode = 0
offset_left = 123.0
offset_top = 25.0
offset_right = 245.0
offset_bottom = 56.0

[node name="Name" type="Label" parent="Start"]
layout_mode = 0
offset_left = 3.0
offset_top = 3.0
offset_right = 50.0
offset_bottom = 26.0
text = "Name"

[node name="LineName" type="LineEdit" parent="Start"]
layout_mode = 0
offset_left = 3.0
offset_top = 25.0
offset_right = 108.0
offset_bottom = 56.0

[node name="Lobby" type="Control" parent="."]
visible = false
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Cancel" type="Button" parent="Lobby"]
layout_mode = 0
offset_left = 165.0
offset_top = 203.0
offset_right = 240.0
offset_bottom = 234.0
text = "Cancel"

[node name="StartGame" type="Button" parent="Lobby"]
visible = false
layout_mode = 0
offset_left = 43.0
offset_top = 203.0
offset_right = 139.0
offset_bottom = 234.0
text = "Start Game"

[node name="PlayersList" type="VBoxContainer" parent="Lobby"]
layout_mode = 0
offset_left = 87.0
offset_top = 1.0
offset_right = 195.0
offset_bottom = 187.0

[node name="Timer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="RestartTimer" type="Timer" parent="."]
wait_time = 0.3
one_shot = true

[connection signal="pressed" from="Start/Host" to="." method="_on_host_pressed"]
[connection signal="pressed" from="Start/Join" to="." method="_on_join_pressed"]
[connection signal="pressed" from="Lobby/Cancel" to="." method="_on_cancel_pressed"]
[connection signal="pressed" from="Lobby/StartGame" to="." method="_on_start_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="RestartTimer" to="." method="_on_restart_timer_timeout"]
